--- a/popup/index.html
+++ b/popup/index.html
@@ -2,14 +2,16 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div id="bar">
-		<h1 id="title">LocalFortress</h1>
-		<button id="close" class="secondary"><img src="cross.svg" id="close-icon" width="25px" height="25px"></button>
+	<div id="content">
+		<div id="bar">
+			<h1 id="title">LocalFortress</h1>
+			<button id="close" class="secondary"><img src="cross.svg" id="close-icon" width="25px" height="25px"></button>
+		</div>
+		<div id="thissite-container">
+			<button id="toggle-thissite" class="primary">Whitelist This Site</button>
+		</div>
+		<div id="whitelist"></div>
 	</div>
-	<div id="thissite-container">
-		<button id="toggle-thissite" class="primary">Whitelist This Site</button>
-	</div>
-	<div id="whitelist"></div>
 	<footer>
 		&copy; 2024 OIRNOIR  -  <a href="https://github.com/OIRNOIR/LocalFortress">GitHub</a>
 	</footer>
