--- a/popup/index.html
+++ b/popup/index.html
@@ -10,6 +10,7 @@
 		<div id="thissite-container">
 			<button id="toggle-thissite" class="primary">Whitelist This Site</button>
 		</div>
+		<div id="whitelist-title">Whitelisted Hostnames</div>
 		<div id="whitelist"></div>
 	</div>
 	<footer>
