Github link opens in a new tab

--- a/popup/index.html
+++ b/popup/index.html
@@ -20,7 +20,7 @@
 			<button id="reqperms" class="primary">Authorize Permissions</button>
 		</div>
 		<footer>
-			&copy; 2024 OIRNOIR  -  <a href="https://github.com/OIRNOIR/LocalFortress">GitHub</a>
+			&copy; 2024 OIRNOIR  -  <a href="https://github.com/OIRNOIR/LocalFortress" target="_blank" rel="noreferrer noopener">GitHub</a>
 		</footer>
 		<script src="script.js"></script>
 	</body>
